--- a/app/index.html
+++ b/app/index.html
@@ -17,15 +17,15 @@
       <div class="app__info">
         <div class="info__tabs">
           <nav class="tabs__items">
-            <button class="tabs__item is-active" data-tab-name="tab-1">
+            <button class="tabs__item is-active" data-tab-name="rus">
               Россия
             </button>
-            <button class="tabs__item" data-tab-name="tab-2">Белоруссия</button>
+            <button class="tabs__item" data-tab-name="bel">Белоруссия</button>
           </nav>
           <div class="tabs__body">
-            <div class="tabs__block is-active tab-1">
+            <div class="tabs__block is-active" data-parent-tab="rus">
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="6">
                   Москва
                   <div class="info__data">
                     <ul>
@@ -52,7 +52,7 @@
                 </div>
               </div>
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="7">
                   Санкт-Петербург
                   <div class="info__data">
                     <ul>
@@ -79,7 +79,7 @@
                 </div>
               </div>
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="8">
                   Екатеринбург
                   <div class="info__data">
                     <ul>
@@ -96,7 +96,7 @@
                 </div>
               </div>
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="9">
                   Сочи
                   <div class="info__data">
                     <ul>
@@ -113,7 +113,7 @@
                 </div>
               </div>
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="10">
                   Грозный
                   <div class="info__data">
                     <ul>
@@ -140,9 +140,9 @@
                 </div>
               </div>
             </div>
-            <div class="tabs__block tab-2">
+            <div class="tabs__block" data-parent-tab="bel">
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="1">
                   Минск
                   <div class="info__data">
                     <ul>
@@ -169,7 +169,7 @@
                 </div>
               </div>
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="2">
                   Бобруйск
                   <div class="info__data">
                     <ul>
@@ -196,7 +196,7 @@
                 </div>
               </div>
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="3">
                   Могилев
                   <div class="info__data">
                     <ul>
@@ -213,7 +213,7 @@
                 </div>
               </div>
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="4">
                   Витебск
                   <div class="info__data">
                     <ul>
@@ -230,7 +230,7 @@
                 </div>
               </div>
               <div class="info__content">
-                <div class="info__city">
+                <div class="info__city" data-city-id="5">
                   Гомель
                   <div class="info__data">
                     <ul>
